Static design finished

--- a/index.html
+++ b/index.html
@@ -6,10 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advice Generator</title>
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+    <section class="full-screen">
+        <div class="dark-container">
+            <div class="advice">
+                <!--Advice generator-->
+                <p class="advice__number">Advice #</p>
+                <h1 class="quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, nulla!</h1>
+                <div class="advice__separator">
+                    <img src="img/pattern-divider-mobile.svg" alt="" class="advice__separator-mobile">
+                    <img src="img/pattern-divider-desktop.svg" alt="" class="advice__separator-desktop">
+                </div>
+                <button class="advice-generator" id="adviceGenerator"><img src="/img/icon-dice.svg"></button>
+            </div>
+
+        </div>
+    </section>
 
 
     <script src="js/app.js"></script>
