--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advice Generator</title>
+    <link rel="icon" href="/img/favicon-32x32.png" type="image/x-icon">
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,13 +20,13 @@
         <div class="dark-container">
             <div class="advice">
                 <!--Advice generator-->
-                <p class="advice__number">Advice #</p>
-                <h1 class="quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, nulla!</h1>
+                <p class="advice__number">Advice <span id="id-number"></span></p>
+                <h1 class="quote"></h1>
                 <div class="advice__separator">
                     <img src="img/pattern-divider-mobile.svg" alt="" class="advice__separator-mobile">
                     <img src="img/pattern-divider-desktop.svg" alt="" class="advice__separator-desktop">
                 </div>
-                <button class="advice-generator" id="adviceGenerator"><img src="/img/icon-dice.svg"></button>
+                <button class="advice-generator" id="quoteGenerator"><img src="/img/icon-dice.svg"></button>
             </div>
 
         </div>
